@@ -368,6 +368,11 @@ endif
 #	ALT_OUTPUTDIR="$(BUILD_OUTPUT_DIR)" 
 #	ALT_JIBX_LIBS_PATH="$(JIBX_DEPS_DIR)"
 
+if ENABLE_JAR_COMPRESSION
+ICEDTEA_ENV += \
+	COMPRESS_JARS="true"
+endif
+
 # OpenJDK boot build environment.
 ICEDTEA_CONFIGURE_BOOT = $(ICEDTEA_CONFIGURE)
 ICEDTEA_ENV_BOOT = $(ICEDTEA_ENV) \
